# ai-anime-recommendor-llmops

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.py
app/: app.py
config/: config.py
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
