[project]
name = "ai-anime-recommendor-llmops"
version = "0.1.0"
description = ""
authors = [
    {name = "amaithi-sam",email = "amaithichirasan.s@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}
